[MD settings] border radius to clip path on avatar icon

This CL changes the way the avatar icon is clipped so that it doesn't
appear to be cut off on the right edge.

BUG=625773
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2769493002
Cr-Commit-Position: refs/heads/master@{#458845}

Former-commit-id: d5d274510522f75f93dfb4c79de24e1a6d301203